--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,6 @@
   .logo-title{
     font-size: 25px;
   }
-
   .navbar-default .navbar-brand{
     color:#fff;
   }
@@ -76,6 +75,19 @@
   /* 
   -----------------------home /index
   */
+.index-img{
+  width: 100%;
+  height: 100vh;
+  background-image: url(../imgs/alanchen/2G0A9537.jpg);
+  /* background-attachment: fixed; */
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;  
+}
+.fadeInUp{
+  width:100%;
+  /* height: 100vh; */
+}
 .nav_bar {
     overflow: hidden;
     background-color: rgb(154, 202, 90);
@@ -92,7 +104,6 @@
 .collapse{
     float:right;
 }
-
 .navbar-top {
     margin-bottom: 0px;
     border: none;
@@ -164,36 +175,6 @@
     .navbar-dot .nav-menu li:hover .dot::after {
       transform: translateY(-50%) scale(1);  
     }
-    .navbar-dot .nav-menu li .dot span {
-      /* display: inline-block;
-      opacity: 0;
-      font-weight: 700;
-      letter-spacing: .5px;
-      text-transform: capitalize;
-      background-color: #f44336;
-      padding: 10px 20px;
-      border-radius: 3px;
-      margin-right: 30px;
-      transform: translateX(20px);
-      transition: all .3s ease; */
-    }
-    .navbar-dot .nav-menu li .dot span::before {
-      /* display: block;
-      position: absolute;
-      content: '';
-      border-left: 7px solid #f44336;
-      border-top: 7px solid transparent;
-      border-bottom: 7px solid transparent;
-      top: 50%;
-      transform: translate(7px, -50%);
-      right: 0;
-      transition: all .3s ease; */
-    }
-    .navbar-dot .nav-menu li .dot.active span,
-    .navbar-dot .nav-menu li:hover .dot span {
-      /* transform: translateX(0px);
-      opacity: 1; */
-    }
     /* End Nav Styles */
 
     /* Start Home Styles */
@@ -245,10 +226,6 @@
     /* End Services Styles */
 
     /* Start Testimonials Styles */
-    /* #test,
-    #test .content-wrapper {
-      min-height: 400px;
-    } */
     /* End Testimonials Styles */
 
     /* Start Contact Styles */
@@ -334,7 +311,6 @@
       transform: translateY(70%);
     } 
 
-
     /*
     ----------------------- course/Process 
     */
@@ -393,7 +369,7 @@
         width: 100%;
         margin: 0 auto;
         text-align: center;
-        background-color: rgba(0,0,0,.6);
+        background-color: rgba(0,0,0,.5);
         color:#fff;
         transition: height .5s cubic-bezier(.63,1.57,.82,1.35);
         /* padding-left: 18px;	 */
@@ -407,12 +383,83 @@
     /* 
     -----------------------form 
     */
+    .admin-panel {
+      width: 100%;
+      max-width:900px;
+      margin: 50px auto;
+      overflow: hidden;
+      background-color:#fff;
+      position:relative;
+    }
+    .slidebar {
+      /* display: inline-block; */
+      background-color: #fff;
+    }
+    .slidebar ul {
+      position:relative;
+      height:100%;
+    }
+    .slidebar a{
+      color: #bbb;
+      text-decoration:none;
+    }
+    .slidebar li{
+      text-align:center;
+      padding: 0px 0px;
+      display: inline-block;
+    }
+
+    ul {
+      padding: 0;
+      margin:0;
+    }
+    li {
+      list-style-type: none;
+      margin: 0;
+      text-align:center;
+      color:#d7d7d7;
+    }
+    .slidebar i {
+      text-align:center;
+      color:#d7d7d7;
+    }
+
+    .slidebar ul a {
+      color:#d7d7d7;
+      display: inline-block;
+      padding: 20px;
+      border-radius:6px; 
+    }
+    .slidebar li:hover a, li#active{
+      background-color: #78ae32;
+    }
+    .main {
+      width: 100%;
+      position: relative;
+    }
+    .main h2 {
+      font-size: 20px;
+      font-weight:600;
+      padding: 0px 0px 20px 0px;
+    }
+
 
     /* 
     -----------------------contact
     */
     .contact-all{
       height: 100vh;
+      background-image: url("../imgs/alanchen/0U2A9444.jpg");
+      background-size: cover;
+      background-attachment: fixed;/*這樣視差捲動效果*/
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      /* background: #e9edf0; */
+
+    }
+    .send-mailBag{
+      width: 50%;
+      background: #e9edf0;
     }
     .container-button{
       max-width:50%;
@@ -421,7 +468,6 @@
       height: 100vh;
       position: relative;
       top: 20%;
-
     }
     .mail{
       word-wrap: break-word;
@@ -436,17 +482,14 @@
     /* contact us button */
     .contactUs {
       font-size: 13px;
-      /* padding: 10px; */
-      background: #e9edf0;
+      /* background: #e9edf0; */
       color: #ffffff;
       text-align: center;
-      /* height: 100vh; */
-      /* margin: 0; */
-      /* display: flex; */
       align-items: center;
     }
     .container-contact {
       width: 100%;
+      /* background-image:url("../imgs/alanchen/0U2A9444.jpg");  */
     }
     .border-animation {
       --border-width: 0.1em;
@@ -665,7 +708,6 @@
         float: none;
         position: relative;
         top: 50%;
-        transform: translateY(0%);
       } 
       /* 
       products
@@ -688,8 +730,7 @@
       Global all
       */
       section.page-section{
-        padding: 150px 0;
-        /* min-height: 100vh; */
+        padding: 0;
       }
       /* 
       navbar
@@ -722,12 +763,13 @@
       section.section_page{
         padding: 50% 0;
       }
+
       /* 休閒農場介紹  */
       .int-center-vertical{
         float: none;
         position: relative;
-        top: 50%;
-        transform: translateY(0%);
+        /* top: 50%; */
+        /* transform: translateY(0%); */
       }
       /* 新聞報導 */
       .news-center-vertical{
@@ -772,12 +814,14 @@
         height: 100vh;
         position: relative;
         top: -50%;
-
       }
-      /*  */
+      .send-mailBag{
+        width: 100%;
+      }
+      
     }
 
-    /* // Medium devices (tablets, less than 992px) */
+    /*  Medium devices (tablets, less than 992px) */
     @media (max-width: 991.98px) {
       /* 
       Global all
@@ -788,20 +832,23 @@
       .news-img{
         top: 0;
       }
+      .section.page-section{
+        padding: 200px 0;
+      }
       /* about : product both */
       section.section_page{
         padding: 50% 0;
       }
-
-      .contact-row{
-        height: 100vh;
-        position: relative;
-        top: 10%;
-
+      .course-center-vertical{
+        transform: translateY(2%);
+      }
+      /* 休閒農場介紹  */
+      .int-center-vertical{
+        transform: translateY(8%);
       }
     }
 
-    /* // Large devices (desktops, less than 1200px) */
+    /*  Large devices (desktops, less than 1200px) */
     @media (max-width: 1199.98px) {
       /* 
       Global all
@@ -810,7 +857,14 @@
       section.section_page{
         padding: 50% 0;
       }
-
+      .contact-row{
+        height: 100vh;
+        top: 20%;
+      }
+      /* course */
+      .course-center-vertical{
+        transform: translateY(0%);
+      }
     }
 
 
@@ -818,66 +872,35 @@
 
 
 
-    
 
 
     /* products css navbar 效果 */
-    .slider-active .owl-nav button{
-      /* background-color: #000; */
+    /* .slider-active .owl-nav button{
       height: 60px;
       width: 60px;
-      /* list-style: 40px; */
-      /* position: absolute; */
-      /* text-align: center; */
-      /* top: 50%; */
-      /* left: 20px; */
-      /* transition: translateY(-50%); */
     }
     .slider-active .owl-nav button i{
       font-size: 60px;
-    }
-    .slider-active .owl-nav div .owl-prev{
-      /* left: 20px; */
-      /* right: auto; */
-      /* width: 50px; */
-      /* height: 50px; */
-      /* background: royalblue; */
-      /* font-size: 40px; */
-    }
-    .slider-active .owl-nav div .owl-next{
-      /* left: 100px; */
-      /* right:100px; */
-      /* width: 50px; */
-      /* height: 50px; */ 
     }
     .slider-active .owl-dots{
       left: 0;
       right: 0;
       bottom: 15px;
       text-align: center;
-
-      /* font-size: 50px; */
-      /* position: relative; */
-
     }
-   
     .slider-active .owl-dot{
       margin: 0 2px;
       display: inline-block;
       border-radius: 50%;
       background: red ;
-    } 
-
+    }
     .owl-nav button.owl-prev{
       position: relative;
       left: -50%;
       top: -330px;
-      /* background: #000; */
     }
-
     .owl-nav button.owl-next{
       position: relative;
       left: 50%;
       top: -330px;
-      /* background: #000; */
-    }
+    } */
